Fixing Footer horizontal Overflow

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@ body {
   min-height: 100vh;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 code {
   font-family:
     source-code-pro,
